--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@babel/polyfill": "7.0.0",
     "@babel/runtime": "^7.2.0",
     "@babel/runtime-corejs2": "^7.2.0",
-    "powerbi-visuals-api": "^2.3.2",
+    "d3": "^5.9.2",
+    "powerbi-visuals-api": "^2.5.0",
     "powerbi-visuals-utils-dataviewutils": "2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@types/d3": "^5.7.2",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "ts-loader": "4.5.0",
