--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@babel/runtime-corejs2": "^7.2.0",
     "d3": "^5.9.2",
     "powerbi-visuals-api": "^2.5.0",
+    "powerbi-visuals-utils-colorutils": "^2.1.0",
     "powerbi-visuals-utils-dataviewutils": "2.0.1",
+    "powerbi-visuals-utils-formattingutils": "^4.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
