--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "scripts": {
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
-    "package": "pbiviz package"
+    "package": "pbiviz package",
+    "cert": "pbiviz --create-cert",
+    "lint": "npm run lint:ts && npm run lint:less",
+    "lint:ts": "node node_modules/tslint/bin/tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts?\"",
+    "lint:less": "stylelint -s less \"style/**/*.less\""
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
@@ -13,7 +17,8 @@
     "powerbi-visuals-api": "^2.5.0",
     "powerbi-visuals-utils-colorutils": "^2.1.0",
     "powerbi-visuals-utils-dataviewutils": "2.0.1",
-    "powerbi-visuals-utils-formattingutils": "^4.1.2",
+    "powerbi-visuals-utils-formattingutils": "^4.2.0",
+    "powerbi-visuals-utils-typeutils": "^2.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
@@ -21,7 +26,11 @@
     "@types/d3": "^5.7.2",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "less": "^3.9.0",
+    "stylelint": "^10.0.1",
     "ts-loader": "4.5.0",
+    "tslint": "^5.16.0",
+    "tslint-microsoft-contrib": "^6.1.1",
     "typescript": "3.0.1"
   }
 }
