--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "allowJs": false,
+    "allowJs": true,
     "jsx": "react",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -9,7 +9,7 @@
     "outDir": "./.tmp/build/",
     "moduleResolution": "node",
     "declaration": true,
-    "types": ["react"],
+    "types": ["react", "jest"],
     "lib": [
       "es2015",
       "dom"
@@ -17,5 +17,8 @@
   },
   "files": [
     "src/visual.tsx"
-  ]
+  ],
+  "env": {
+    "jest": true
+  }
 }
