core-js and api update

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@babel/runtime-corejs2": "^7.2.0",
     "babel-jest": "^24.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "powerbi-visuals-api": "^2.6.0",
+    "core-js": "^3.4.2",
+    "powerbi-visuals-api": "^2.6.1",
     "powerbi-visuals-utils-colorutils": "^2.1.0",
     "powerbi-visuals-utils-dataviewutils": "2.0.1",
     "powerbi-visuals-utils-formattingutils": "^4.2.0",
